# pdf-compressor

./: .dockerignore  .env  API-REFERENCE.md  BUGFIX-MUTEX-CONTENTION.md  Cargo.toml  DEPLOYMENT-GUIDE.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  N8N-GUIDE.md  PERFORMANCE-OPTIMIZATIONS.md  Postman-Collection.json  QUICK-START-SECURITY.md  README-API.md  SECURITY-SETUP.md  TEST-SUMMARY.md  TESTING.md  build_app.sh  docker-compose.yml  generate-api-key.sh  index.html  llm.txt  n8n-workflow.json  run_with_logs.sh  tauri.conf.json  test-api.sh
PDF Compressor.app/Contents/: Info.plist
benches/: compression_bench.rs
src/: api.rs  lib.rs  main.rs
tests/: api_tests.rs  generate_fixtures.rs  gui_tests.rs  lib_tests.rs
tests/common/: mod.rs
