[package]
name = "PDFcompressor"
version = "0.1.0"
edition = "2021"

[lib]
name = "PDFcompressor"
path = "src/lib.rs"

[[bin]]
name = "pdfcompressor-gui"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "pdfcompressor-api"
path = "src/bin/api.rs"

[dependencies]
# Core dependencies (always needed)
lopdf = "0.32"
serde = { version = "1.0", features = ["derive"] }
image = "0.24"
flate2 = "1.0"
log = "0.4"
env_logger = "0.11"
infer = "0.16"

# GUI dependencies (optional)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }

# API dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"

[features]
default = ["gui", "api"]
gui = ["eframe", "egui", "rfd"]
api = []
